@@ -12,6 +12,193 @@
         <test.argline />
       </properties>
     </profile>
+    <profile>
+      <id>jdk8</id>
+      <activation>
+        <jdk>(,1.8]</jdk>
+      </activation>
+      <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>6.14.3</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.25</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j-impl</artifactId>
+          <version>2.11.2</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <!-- Overrides transitive dep on 5.2.1 -->
+          <groupId>net.sf.proguard</groupId>
+          <artifactId>proguard-base</artifactId>
+          <version>${proguard.version}</version>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.22.1</version>
+              <configuration>
+                <argLine>@{argLine} ${test.jdk8.argline}</argLine>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <version>2.22.1</version>
+              <configuration>
+                <argLine>@{argLine} ${test.jdk8.argline}</argLine>
+              </configuration>
+              <executions>
+                <execution>
+                  <!-- Check that Proguard isn't breaking anything -->
+                  <id>test</id>
+                  <phase>integration-test</phase>
+                  <goals>
+                    <goal>integration-test</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+            <plugin>
+              <groupId>com.github.wvengen</groupId>
+              <artifactId>proguard-maven-plugin</artifactId>
+              <version>2.0.14</version>
+              <configuration>
+                <proguardJar>${user.home}/.m2/repository/net/sf/proguard/proguard-base/${proguard.version}/proguard-base-${proguard.version}.jar
+                </proguardJar>
+                <proguardInclude>${basedir}/proguard.conf</proguardInclude>
+                <libs>
+                  <lib>${java.home}/lib/rt.jar</lib>
+                  <lib>${java.home}/lib/jce.jar</lib>
+                </libs>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>com.github.wvengen</groupId>
+            <artifactId>proguard-maven-plugin</artifactId>
+            <version>2.0.14</version>
+            <executions>
+              <execution>
+                <id>proguard</id>
+                <!-- Work around lack of a post-package phase (proguard requires existing jar -->
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>proguard</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jdk9</id>
+      <activation>
+        <jdk>[9.0,)</jdk>
+      </activation>
+      <properties>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>7.0.0-beta1</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j18-impl</artifactId>
+          <version>2.11.2</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.8.0-beta2</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>${pitest.version}</version>
+            <configuration>
+              <jvmArgs>
+                <value>-Djava.security.egd=file:/dev/./urandom</value>
+                <value>--add-opens</value>
+                <value>java.xml/jdk.xml.internal=ALL-UNNAMED</value>
+              </jvmArgs>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>pit</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>${pitest.version}</version>
+            <configuration>
+              <threads>4</threads>
+              <coverageThreshold>85</coverageThreshold>
+              <mutationThreshold>75</mutationThreshold>
+              <!-- AesCounterRandom excluded due to https://github.com/hcoles/pitest/issues/504 -->
+              <excludedClasses>
+                <excludedClass>io.github.pr0methean.betterrandom.prng.AesCounterRandom</excludedClass>
+              </excludedClasses>
+              <avoidCallsTo>
+                <avoidCallsTo>org.slf4j</avoidCallsTo>
+              </avoidCallsTo>
+              <timeoutFactor>2</timeoutFactor>
+              <timeoutConstant>4000</timeoutConstant>
+              <testPlugin>testng</testPlugin>
+              <failWhenNoMutations>true</failWhenNoMutations>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>6.14.3</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <!-- Needed to override a transitive dep in Powermock that breaks Pitest -->
+          <groupId>org.javassist</groupId>
+          <artifactId>javassist</artifactId>
+          <version>3.22.0-GA</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
     <!-- GPG Signature on release -->
     <profile>
       <id>release-sign-artifacts</id>
